--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 on: 
-  push:
+  pull_request:
     branches:
       - main
 
@@ -16,9 +16,11 @@ jobs:
           tag_prefix: ""
           bump_version_scheme: norelease
           dry_run: true
+
       - name: Check out the repo
         if: steps.prerelease.outputs.version
         uses: actions/checkout@v3
+
       - name: Bump the version numbers
         if: steps.prerelease.outputs.version
         run: |
@@ -36,3 +38,4 @@ jobs:
         with:
           tag_prefix: ""
           bump_version_scheme: norelease
+          use_github_release_notes: true
