--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 on: 
-  pull_request:
+  push:
     branches:
       - main
 
@@ -24,6 +24,7 @@ jobs:
       - name: Bump the version numbers
         if: steps.prerelease.outputs.version
         run: |
+          echo "${{ toJSON(github) }}"
           echo "Creating release version ${{ steps.prerelease.outputs.version }}"
           git checkout
           sed -i "s/version\":\ \"[0-9]\+\.\?[0-9]*\.\?[0-9]*/version\":\ \"${{ steps.prerelease.outputs.version }}/g" ./defo.txt
