--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,7 @@ jobs:
           git push
       
       - name: Create a GitHub release
+        if: steps.prerelease.outputs.version
         uses: ncipollo/release-action@v1
         with:
           tag: ${{ steps.prerelease.outputs.version }}
