--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,7 +31,7 @@ jobs:
           git config user.name "Github Actions"
           git config user.email "<>"
           git add .
-          git commit
+          git commit -am "Version Numbering"
           git push
       
       - name: Create a GitHub release
