--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,12 @@ on:
     branches:
       - main
 jobs:
+  # This job utilises a marketplace action tag to automatically create a release when a pull request 
+  # is labelled as release:major, release:minor or release:patch (it can also be controlled via commit
+  # message - see their docs for more info)
+  #
+  # Unfortunately it doesn't expose a point at which we can change the files before the Version is
+  # tagged, so we run it in 'dry-run' mode and expose its outputs for use later if required
   check_for_release:
     runs-on: ubuntu-latest
     outputs:
@@ -19,7 +25,13 @@ jobs:
           bump_version_scheme: norelease
           dry_run: true
           use_github_release_notes: true
-  
+  # This job only runs if the previous job detects that a new release is required. It checks out the 
+  # main branch of the repo, runs some string replaces via `sed` to bump the version numbers. These
+  # may be changed to suit your project if required.
+  #
+  # @TODO Investigate the possibility of adding a build step between Bump the Version Numbers and
+  # Create a Github Release. The release action allows for zip artifacts to be uploaded, which may
+  # be extremely appropriate for distribution.
   create_release:
     needs: check_for_release
     runs-on: ubuntu-latest
@@ -34,8 +46,9 @@ jobs:
         run: |
           echo "Creating release version ${{ needs.check_for_release.outputs.version }}"
           git checkout
-          sed -i "s/version\":\ \"[0-9]\+\.\?[0-9]*\.\?[0-9]*/version\":\ \"${{ needs.check_for_release.outputs.version }}/g" ./defo.txt
-          sed -i "s/Version:\ [0-9]\+\.\?[0-9]*\.\?[0-9]*/Version:\ ${{ needs.check_for_release.outputs.version }}/g" ./pie.txt
+          sed -i "s/version\":\ \"[0-9]\+\.\?[0-9]*\.\?[0-9]*/version\":\ \"${{ needs.check_for_release.outputs.version }}/g" ./package.json
+          sed -i "s/Version:\ [0-9]\+\.\?[0-9]*\.\?[0-9]*/Version:\ ${{ needs.check_for_release.outputs.version }}/g" ./plugin.php
+          sed -i "s/\[Unreleased\]/\[${{ needs.check_for_release.outputs.version }}\] /g" ./changelog.md
           git config user.name "Github Actions"
           git config user.email "<>"
           git add .
