adding date to str_Replace

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,14 +41,18 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v3
-
+      
+      - name: Get current date
+        id: get_date
+        run: echo "::set-output name=date::$(date +'%Y-%m-%d')"
+      
       - name: Bump the version numbers
         run: |
           echo "Creating release version ${{ needs.check_for_release.outputs.version }}"
           git checkout
           sed -i "s/version\":\ \"[0-9]\+\.\?[0-9]*\.\?[0-9]*/version\":\ \"${{ needs.check_for_release.outputs.version }}/g" ./package.json
           sed -i "s/Version:\ [0-9]\+\.\?[0-9]*\.\?[0-9]*/Version:\ ${{ needs.check_for_release.outputs.version }}/g" ./plugin.php
-          sed -i "s/\[Unreleased\]/\[${{ needs.check_for_release.outputs.version }}\] /g" ./changelog.md
+          sed -i "s/\[Unreleased\]/\[${{ needs.check_for_release.outputs.version }}\] ${{steps.get_date.outputs.date}} /g" ./changelog.md
           git config user.name "Github Actions"
           git config user.email "<>"
           git add .
